--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,6 @@
 	"version": "0.0.1",
 	"description": "Navigate paginated websites via hotkeys",
 	"manifest_version": 2,
-	"browser_specific_settings": {
-		"gecko": {
-			"id": "pages@example.com"
-		}
-	},
 	"browser_action": {
 		"default_popup": "popup.html",
 		"browser_style": true
@@ -17,10 +12,10 @@
 		"browser_style": true
 	},
 	"icons": {
-		"16": "assets/images/icon16.png",
-		"32": "assets/images/icon32.png",
-		"48": "assets/images/icon48.png",
-		"128": "assets/images/icon128.png"
+		"16":  "assets/images/icon.svg",
+		"32":  "assets/images/icon.svg",
+		"48":  "assets/images/icon.svg",
+		"128": "assets/images/icon.svg"
 	},
 	"content_scripts": [
 		{
